<resources>
    <string name="app_name">Outdoor Companion</string>
    <string name="trips">Trips</string>
    <string name="weather">Weather</string>
    <string name="home">Home</string>
    <string name="flora_and_fauna">Flora and Fauna</string>
    <string name="profile">Profile</string>
    <string name="unknown">UNKNOWN</string>
    <string name="more_info_icon">More Info Icon</string>
    <string name="completed_hikes">Pictures of your completed hikes</string>
    <string name="error_retrieving_api_success_response">Error retrieving data.</string>
    <string name="error_no_gps_location_found">Error - No GPS location found.</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="current_weather">Current Weather</string>
    <string name="trip_type_hike">Hiking</string>
    <string name="trip_type_cross_country_ski">Nordic Skiing</string>
    <string name="trip_type_climb">Climbing</string>
    <string name="trips_create_dropdown_choose_something_exciting">Choose something exciting!</string>
    <string name="trips_create_description">Description</string>
    <string name="trips_create_create_trip">Create Trip</string>
    <string name="trips_create_trip_type">Trip Type</string>
    <string name="trips_create_clear_trip">Clear Trip</string>
    <string name="trips_create_how_to_use_the_map">How to use the map</string>
    <string name="trips_create_got_it">Okay</string>
    <string name="trips_create_tap_the_map">Tap the map to add points and draw routes.</string>
    <string name="trips_create_hold_on_a_point">Hold on a point to remove it from the route.</string>
    <string name="settings">Settings</string>
    <string name="weather_change_forecast_settings">Change Forecast Settings</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_wildlife">Wildlife</string>
    <string name="navigation_additional_information">Additional Information</string>
    <string name="navigation_undefined">UNDEFINED</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_weather">Weather</string>
    <string name="navigation_trips">Trips</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_create_trip">Create Trip</string>
    <string name="navigation_recent_activity">Trip Log</string>
    <string name="navigation_add_trip">Add Trip</string>
    <string name="navigation_search_results">Search Results</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_add_sighting">Add Sighting</string>
    <string name="trips_create_dropdown_this_type_of_activity">This type of activity isn\'t currently supported.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="trips_create_dropdown_create_trip">Create trip?</string>
    <string name="trips_create_dropdown_do_you_wish_create">Do you wish create this trip so that it is accessible to everyone?</string>
    <string name="trips_create_dropdown_clear_trip">Clear trip?</string>
    <string name="trips_create_dropdown_do_you_wish_to_clear">Do you wish to clear the data relating to trip you\'re currently creating?</string>
    <string name="back">Back</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulty</string>
    <string name="date">Date</string>
    <string name="trips_add_to_recent_activity">Add to Recent Activity</string>
    <string name="trips_recent_activity_add_trip">Add Trip</string>
    <string name="lang_english">English</string>
    <string name="lang_norwegian">Norwegian</string>
    <string name="lang_language">Language</string>
    <string name="lang_select_language">Select Language</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="enabled">Enabled</string>
    <string name="oops">Oops!</string>
    <string name="okay">Okay</string>
    <string name="loc_permission_declined">You seem to have declined permission to share your location one too many times. If you wish to share your location with this application then please enable permissions manually via your phone\'s settings.</string>
    <string name="lang_german" translatable="false">German</string>
    <string name="lang_spanish" translatable="false">Spanish</string>
    <string name="display_picture">Profile Picture</string>
    <string name="profile_your_year_so_far">Your %1$s So Far</string>
    <string name="profile_number_trails_completed">%1$s trails completed</string>
    <string name="profile_number_kilometers_travelled">%1$s kilometers travelled</string>
    <string name="profile_number_individual_species_identified">%1$s individual species identified</string>
    <string name="flora_fauna_subclass_bird">Bird</string>
    <string name="flora_fauna_subclass_mammal">Mammal</string>
    <string name="flora_fauna_subclass_insect">Insect</string>
    <string name="flora_fauna_subclass_fish">Fish</string>
    <string name="flora_fauna_subclass_plant">Plant</string>
    <string name="flora_fauna_subclass_fungi">Fungi</string>
    <string name="flora_fauna_subclass_extraterrestrial">Extraterrestrial</string>
    <string name="weather_metric"><![CDATA[Metric (°C & m/s)]]></string>
    <string name="weather_imperial"><![CDATA[Imperial (°F & mi/s)]]></string>
    <string name="weather_default"><![CDATA[Default (K & m/s)]]></string>
    <string name="search_search_for_a_place">Search for a place</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_clear_text">Clear Text</string>
    <string name="refresh">Refresh</string>
    <string name="weather_update_weather_forecast">Update Weather Forecast</string>
    <string name="trips_create_clear">Clear</string>
    <string name="trips_create_info">Info</string>
    <string name="add">Add</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="navigation_back_to_trips">Back to Trips</string>
    <string name="trip_additional_info_error_retrieving_trip_information">Error retrieving trip information.</string>
    <string name="settings_register_account">Register Account</string>
    <string name="settings_select_profile_picture">Select Profile Picture</string>
    <string name="navigation_back_to_profile">Back to Profile</string>
    <string name="settings_change_language">Change Language</string>
    <string name="settings_update_profile_picture">Update Profile Picture</string>
    <string name="settings_profile_picture">Profile Picture</string>
    <string name="settings_update_gps_location">Update GPS Location</string>
    <string name="settings_gps_location">GPS Location</string>
    <string name="settings_you_are_already_sharing_your_gps_location">You are already sharing your GPS location.</string>
    <string name="settings_toggle_dark_mode">Toggle Dark Mode</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_email_not_registered">Email not registered</string>
    <string name="settings_email">Email: %1$s</string>
    <string name="settings_no_gps_location_permission_given">No GPS location permission given</string>
    <string name="settings_municipality">Municipality: %1$s</string>
    <string name="settings_county">County: %1$s</string>
    <string name="settings_country">Country: %1$s</string>
    <string name="profile_year_leaderboard">%1$s Leaderboard</string>
    <string name="profile_trips_taken">Trips Taken</string>
    <string name="profile_species_spotted">Species Spotted</string>
    <string name="log_out">Log out</string>
    <string name="flora_fauna_unknown_common_name">Unknown Common Name</string>
    <string name="flora_fauna_use_my_location">Use my location</string>
    <string name="search">Search</string>
    <string name="trips_add_to_trip_log">Add to Trip Log</string>
    <string name="trips_date_of_trip">Date of trip</string>
    <string name="trips_choose_a_date">Choose a date</string>
    <string name="trips_add_to_trip_log_question">Add to trip log?</string>
    <string name="trips_do_you_wish_to_add">Do you wish to add this trip activity to your trip log?</string>
    <string name="flora_fauna_info_error_retrieving_species_information">Error retrieving species information</string>
    <string name="flora_fauna_info_date_of_sighting">Date of sighting</string>
    <string name="flora_fauna_info_choose_a_date">Choose a date</string>
    <string name="flora_fauna_info_add_to_lifelist">Add to lifelist</string>
    <string name="flora_fauna_info_add_to_lifelist_question">Add to lifelist?</string>
    <string name="flora_fauna_info_do_you_wish_to_add">Do you wish to add this sighting to your lifelist?</string>
    <string name="flora_fauna_info_add_sighting">Add Sighting</string>
    <string name="flora_fauna_info_back_to_results">Back to results</string>
    <string name="not_share_location_msg">You are currently not sharing your location. You can still search for species using the search field!</string>
    <string name="understood">Understood</string>
    <string name="not_share_location_msg_HomePage">Enable location permissions to see trips and sightings in your area</string>
    <string name="no_gps_location_found_using_default_oslo">No GPS location found. Using default:Oslo</string>
    <string name="not_share_location_msg_TripScreen">You are currently not sharing your location. You can still browse trips!</string>
    <string name="noGpsMsg_CreateTripScreen">You are currently not sharing your location. You can still create a trip!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="warning">Warning</string>
    <string name="no_internett_no_search">No internet connection. You are not able to search this area</string>
    <string name="enable_network_to_search_for_a_place">Enable network to search for a place</string>
    <string name="warningicon">WarningIcon</string>
    <string name="username_hedgehog">Hedgehog</string>
    <string name="username_squirrel">Squirrel</string>
    <string name="username_polecat">Polecat</string>
    <string name="username_mole">Mole</string>
    <string name="username_badger">Badger</string>
    <string name="username_fox">Fox</string>
    <string name="username_magpie">Magpie</string>
    <string name="username_mouse">Mouse</string>
    <string name="username_robin">Robin</string>
    <string name="username_adder">Adder</string>
    <string name="username_deer">Deer</string>
    <string name="username_moose">Moose</string>
    <string name="search_this_area">Search this area</string>
    <string name="trips_in_your_area">Trips in your area</string>
    <string name="there_are_currently_no_trips_in_your_area">There are currently no trips in your area</string>
    <string name="recent_sightings">Recent Sightings</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="no_trips_can_be_found_in_your_area_because_you_aren_t_currently_sharing_your_location">No trips can be found in your area because you aren\'t currently sharing your location</string>
    <string name="sightings_in_your_area">Sightings in your area</string>
    <string name="no_sightings_can_be_found_in_your_area_because_you_aren_t_currently_sharing_your_location">No sightings can be found in your area because you aren\'t currently sharing your location</string>
    <string name="there_are_currently_no_sightings_in_your_area">There are currently no sightings in your area</string>
    <string name="you_currently_have_no_sightings_in_your_lifelist">You currently have no sightings in your lifelist</string>
    <string name="you_currently_have_no_trips_in_your_trip_log">You currently have no trips in your trip log</string>
    <string name="distance_km">Distance: %1$s km</string>
    <string name="duration_min">Duration: %1$s min</string>
    <string name="date_seen">Date seen: %1$s</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="the_trip_is_now_available_and_displayed_on_the_map">The trip is now available and displayed on the map.</string>
    <string name="s_successfully_added_to_life_list">Sighting has ben successfully added to life-list</string>
    <string name="no_trips_in_this_radius">There are no trips in this radius</string>
    <string name="trip_successfully_added_to_trip_log">Trip successfully added to Trip Log</string>
    <string name="n_results">%1$s results</string>
</resources>